-------------------------- soilDB 1.5-3 (2015-03-10) ----------------------------
* nullFragsAreZero argument to fetchNASIS() reset to TRUE, new documentation pending

-------------------------- soilDB 1.5-2 (2015-02-24) ----------------------------
* RODBC temporarily moved from "suggested" package to "imported" package... not a good idea, reverted to "suggested"

-------------------------- soilDB 1.4-5 (2015-01-20) ----------------------------
* mix_and_clean_colors() now returns back-transformed, mixed, munsell colors
* added psctopdepth and pscbotdepth back to extended NASIS query (particle size control section depths)

-------------------------- soilDB 1.4-3 (2015-01-12) ----------------------------
* get_hz_data_from_NASIS_db() no longer assumes fragment volume of NULL = 0
* get_extended_data_from_NASIS_db() no longer assumes fragment volume of NULL = 0
* fetchNASIS() has a new argument, nullFragsAreZero=FALSE; set to TRUE for past NULL -> 0 conversion

-------------------------- soilDB 1.4-2 (2014-12-23) ----------------------------
* new internally-used function .formatLandformString() for flattening NASIS/PedonPC "landform" records
* new internally-used function .formatParentMaterialString() for flattening NASIS/PedonPC "parent material" records
* fetchNASIS() incorporates the results of these two new functions
* new function SSURGO_spatial_query() queries SSURGO data from SoilWeb (see manual page for details)

-------------------------- soilDB 1.4 (2014-11-13) ----------------------------
* moving most of the hard-to-install packages into `suggests`, and checking for package availability at function runtime. this will make soilDB more portable, as not every user will want or need all functionality.

-------------------------- soilDB 1.3-6 (2014-10-27) ----------------------------
* fetchNASIS() gains argument rmHzErrors to optionally retain pedons with horizonation errors. use with caution.
